--- a/index.css
+++ b/index.css
@@ -9,8 +9,8 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;  /* Stack elements vertically */
-    /* height: 100vh; */
-    /* overflow: hidden; */
+    height: 100vh;
+    overflow: hidden;
     position: relative;
     text-align: center;
 }
